--- a/tx-ultimate-gestures.yaml
+++ b/tx-ultimate-gestures.yaml
@@ -76,70 +76,58 @@ action:
           - condition: template
             value_template: "{{ trigger.entity_id == 'binary_sensor.swipe_up' }}"
         sequence:
-          - choose:
-              - conditions:
-                  - condition: template
-                    value_template: "{{ (swipe_up_target | length) > 0 }}"
-                sequence:
-                  - service: light.turn_on
-                    target: !input swipe_up_target
+          - condition: template
+            value_template: "{{ (swipe_up_target.entity_id | length) > 0 }}"
+          - service: light.turn_on
+            data:
+              entity_id: "{{ swipe_up_target.entity_id | join(',') }}"
 
       - conditions:
           - condition: template
             value_template: "{{ trigger.entity_id == 'binary_sensor.swipe_down' }}"
         sequence:
-          - choose:
-              - conditions:
-                  - condition: template
-                    value_template: "{{ (swipe_down_target | length) > 0 }}"
-                sequence:
-                  - service: light.turn_off
-                    target: !input swipe_down_target
+          - condition: template
+            value_template: "{{ (swipe_down_target.entity_id | length) > 0 }}"
+          - service: light.turn_off
+            data:
+              entity_id: "{{ swipe_down_target.entity_id | join(',') }}"
 
       - conditions:
           - condition: template
             value_template: "{{ trigger.entity_id == 'binary_sensor.touchfield_1' }}"
         sequence:
-          - choose:
-              - conditions:
-                  - condition: template
-                    value_template: "{{ (touchfield_1_toggle_target | length) > 0 }}"
-                sequence:
-                  - service: light.toggle
-                    target: !input touchfield_1_toggle_target
+          - condition: template
+            value_template: "{{ (touchfield_1_toggle_target.entity_id | length) > 0 }}"
+          - service: light.toggle
+            data:
+              entity_id: "{{ touchfield_1_toggle_target.entity_id | join(',') }}"
 
       - conditions:
           - condition: template
             value_template: "{{ trigger.entity_id == 'binary_sensor.touchfield_2' }}"
         sequence:
-          - choose:
-              - conditions:
-                  - condition: template
-                    value_template: "{{ (touchfield_2_toggle_target | length) > 0 }}"
-                sequence:
-                  - service: light.toggle
-                    target: !input touchfield_2_toggle_target
+          - condition: template
+            value_template: "{{ (touchfield_2_toggle_target.entity_id | length) > 0 }}"
+          - service: light.toggle
+            data:
+              entity_id: "{{ touchfield_2_toggle_target.entity_id | join(',') }}"
 
       - conditions:
           - condition: template
             value_template: "{{ trigger.entity_id == 'binary_sensor.touchfield_3' }}"
         sequence:
-          - choose:
-              - conditions:
-                  - condition: template
-                    value_template: "{{ (touchfield_3_toggle_target | length) > 0 }}"
-                sequence:
-                  - service: light.toggle
-                    target: !input touchfield_3_toggle_target
+          - condition: template
+            value_template: "{{ (touchfield_3_toggle_target.entity_id | length) > 0 }}"
+          - service: light.toggle
+            data:
+              entity_id: "{{ touchfield_3_toggle_target.entity_id | join(',') }}"
 
       - conditions:
           - condition: template
             value_template: "{{ trigger.entity_id == 'binary_sensor.touchfield_4' }}"
         sequence:
-          - choose:
-              - conditions:
-                  - condition: template
-                    value_template: "{{ (touchfield_4_toggle_target | length) > 0 }}"
-                sequence:
-                  - service: light.toggle
-                    target: !input touchfield_4_toggle_target
+          - condition: template
+            value_template: "{{ (touchfield_4_toggle_target.entity_id | length) > 0 }}"
+          - service: light.toggle
+            data:
+              entity_id: "{{ touchfield_4_toggle_target.entity_id | join(',') }}"
