--- a/tx-ultimate-gestures.yaml
+++ b/tx-ultimate-gestures.yaml
@@ -1,10 +1,9 @@
 blueprint:
-  name: TX Ultimate Gesture Control (4 Touchfields, optional actions)
+  name: TX Ultimate Gesture Control (Device + Gesture Entity Selectors)
   description: >
     Control lights or areas using swipes and touches from a Sonoff TX Ultimate panel
-    with ESPHome. Supports swipe up/down and 4 touchfields with toggle actions.
-    All actions except device selection are optional.
-
+    with ESPHome. Select your device, then assign gesture binary sensors from that device.
+    Supports swipe up/down and 4 touchfields with toggle actions.
   domain: automation
   input:
     tx_device:
@@ -12,45 +11,92 @@ blueprint:
       description: Select your TX Ultimate device running ESPHome.
       selector:
         device:
-          integration: esphome
+
+    swipe_up_entity:
+      name: Swipe Up Gesture Sensor
+      description: Select the binary sensor entity for swipe up gesture from the device.
+      selector:
+        entity:
+          domain: binary_sensor
+          device: !input tx_device
 
     swipe_up_target:
-      name: Swipe Up - Turn On
+      name: Swipe Up - Turn On Targets
       description: Lights or area to turn ON when swipe up is detected.
       default: []
       selector:
         target:
 
+    swipe_down_entity:
+      name: Swipe Down Gesture Sensor
+      description: Select the binary sensor entity for swipe down gesture from the device.
+      selector:
+        entity:
+          domain: binary_sensor
+          device: !input tx_device
+
     swipe_down_target:
-      name: Swipe Down - Turn Off
+      name: Swipe Down - Turn Off Targets
       description: Lights or area to turn OFF when swipe down is detected.
       default: []
       selector:
         target:
 
+    touchfield_1_entity:
+      name: Touchfield 1 Gesture Sensor
+      description: Select the binary sensor entity for touchfield 1 from the device.
+      selector:
+        entity:
+          domain: binary_sensor
+          device: !input tx_device
+
     touchfield_1_toggle_target:
-      name: Touchfield 1 - Toggle
+      name: Touchfield 1 - Toggle Targets
       description: Lights to toggle when touchfield 1 is pressed.
       default: []
       selector:
         target:
 
+    touchfield_2_entity:
+      name: Touchfield 2 Gesture Sensor
+      description: Select the binary sensor entity for touchfield 2 from the device.
+      selector:
+        entity:
+          domain: binary_sensor
+          device: !input tx_device
+
     touchfield_2_toggle_target:
-      name: Touchfield 2 - Toggle
+      name: Touchfield 2 - Toggle Targets
       description: Lights to toggle when touchfield 2 is pressed.
       default: []
       selector:
         target:
 
+    touchfield_3_entity:
+      name: Touchfield 3 Gesture Sensor
+      description: Select the binary sensor entity for touchfield 3 from the device.
+      selector:
+        entity:
+          domain: binary_sensor
+          device: !input tx_device
+
     touchfield_3_toggle_target:
-      name: Touchfield 3 - Toggle
+      name: Touchfield 3 - Toggle Targets
       description: Lights to toggle when touchfield 3 is pressed.
       default: []
       selector:
         target:
 
+    touchfield_4_entity:
+      name: Touchfield 4 Gesture Sensor
+      description: Select the binary sensor entity for touchfield 4 from the device.
+      selector:
+        entity:
+          domain: binary_sensor
+          device: !input tx_device
+
     touchfield_4_toggle_target:
-      name: Touchfield 4 - Toggle
+      name: Touchfield 4 - Toggle Targets
       description: Lights to toggle when touchfield 4 is pressed.
       default: []
       selector:
@@ -61,12 +107,12 @@ mode: single
 trigger:
   - platform: state
     entity_id:
-      - binary_sensor.swipe_up
-      - binary_sensor.swipe_down
-      - binary_sensor.touchfield_1
-      - binary_sensor.touchfield_2
-      - binary_sensor.touchfield_3
-      - binary_sensor.touchfield_4
+      - !input swipe_up_entity
+      - !input swipe_down_entity
+      - !input touchfield_1_entity
+      - !input touchfield_2_entity
+      - !input touchfield_3_entity
+      - !input touchfield_4_entity
     from: 'off'
     to: 'on'
 
@@ -74,60 +120,60 @@ action:
   - choose:
       - conditions:
           - condition: template
-            value_template: "{{ trigger.entity_id == 'binary_sensor.swipe_up' }}"
+            value_template: "{{ trigger.entity_id == swipe_up_entity }}"
         sequence:
           - condition: template
-            value_template: "{{ (swipe_up_target.entity_id | length) > 0 }}"
+            value_template: "{{ (swipe_up_target | length) > 0 }}"
           - service: light.turn_on
             data:
-              entity_id: "{{ swipe_up_target.entity_id | join(',') }}"
+              entity_id: "{{ swipe_up_target | join(',') }}"
 
       - conditions:
           - condition: template
-            value_template: "{{ trigger.entity_id == 'binary_sensor.swipe_down' }}"
+            value_template: "{{ trigger.entity_id == swipe_down_entity }}"
         sequence:
           - condition: template
-            value_template: "{{ (swipe_down_target.entity_id | length) > 0 }}"
+            value_template: "{{ (swipe_down_target | length) > 0 }}"
           - service: light.turn_off
             data:
-              entity_id: "{{ swipe_down_target.entity_id | join(',') }}"
+              entity_id: "{{ swipe_down_target | join(',') }}"
 
       - conditions:
           - condition: template
-            value_template: "{{ trigger.entity_id == 'binary_sensor.touchfield_1' }}"
+            value_template: "{{ trigger.entity_id == touchfield_1_entity }}"
         sequence:
           - condition: template
-            value_template: "{{ (touchfield_1_toggle_target.entity_id | length) > 0 }}"
+            value_template: "{{ (touchfield_1_toggle_target | length) > 0 }}"
           - service: light.toggle
             data:
-              entity_id: "{{ touchfield_1_toggle_target.entity_id | join(',') }}"
+              entity_id: "{{ touchfield_1_toggle_target | join(',') }}"
 
       - conditions:
           - condition: template
-            value_template: "{{ trigger.entity_id == 'binary_sensor.touchfield_2' }}"
+            value_template: "{{ trigger.entity_id == touchfield_2_entity }}"
         sequence:
           - condition: template
-            value_template: "{{ (touchfield_2_toggle_target.entity_id | length) > 0 }}"
+            value_template: "{{ (touchfield_2_toggle_target | length) > 0 }}"
           - service: light.toggle
             data:
-              entity_id: "{{ touchfield_2_toggle_target.entity_id | join(',') }}"
+              entity_id: "{{ touchfield_2_toggle_target | join(',') }}"
 
       - conditions:
           - condition: template
-            value_template: "{{ trigger.entity_id == 'binary_sensor.touchfield_3' }}"
+            value_template: "{{ trigger.entity_id == touchfield_3_entity }}"
         sequence:
           - condition: template
-            value_template: "{{ (touchfield_3_toggle_target.entity_id | length) > 0 }}"
+            value_template: "{{ (touchfield_3_toggle_target | length) > 0 }}"
           - service: light.toggle
             data:
-              entity_id: "{{ touchfield_3_toggle_target.entity_id | join(',') }}"
+              entity_id: "{{ touchfield_3_toggle_target | join(',') }}"
 
       - conditions:
           - condition: template
-            value_template: "{{ trigger.entity_id == 'binary_sensor.touchfield_4' }}"
+            value_template: "{{ trigger.entity_id == touchfield_4_entity }}"
         sequence:
           - condition: template
-            value_template: "{{ (touchfield_4_toggle_target.entity_id | length) > 0 }}"
+            value_template: "{{ (touchfield_4_toggle_target | length) > 0 }}"
           - service: light.toggle
             data:
-              entity_id: "{{ touchfield_4_toggle_target.entity_id | join(',') }}"
+              entity_id: "{{ touchfield_4_toggle_target | join(',') }}"
