--- a/tx-ultimate-gestures.yaml
+++ b/tx-ultimate-gestures.yaml
@@ -1,8 +1,9 @@
 blueprint:
-  name: TX Ultimate Gesture Control (Optional Inputs)
+  name: TX Ultimate Gesture Control (Optional, with dummy defaults)
   description: >
     Control lights or areas using swipes and touches from a Sonoff TX Ultimate panel.
     Each gesture input and target is optional.
+    Use dummy entity 'binary_sensor.dummy' as default for optional gesture sensors.
   domain: automation
 
   input:
@@ -13,7 +14,7 @@ blueprint:
 
     swipe_up_entity:
       name: Swipe Up Gesture Sensor
-      default: ""
+      default: binary_sensor.dummy
       selector:
         entity:
           domain: binary_sensor
@@ -26,7 +27,7 @@ blueprint:
 
     swipe_down_entity:
       name: Swipe Down Gesture Sensor
-      default: ""
+      default: binary_sensor.dummy
       selector:
         entity:
           domain: binary_sensor
@@ -39,7 +40,7 @@ blueprint:
 
     touchfield_1_entity:
       name: Touchfield 1 Gesture Sensor
-      default: ""
+      default: binary_sensor.dummy
       selector:
         entity:
           domain: binary_sensor
@@ -52,7 +53,7 @@ blueprint:
 
     touchfield_2_entity:
       name: Touchfield 2 Gesture Sensor
-      default: ""
+      default: binary_sensor.dummy
       selector:
         entity:
           domain: binary_sensor
@@ -65,7 +66,7 @@ blueprint:
 
     touchfield_3_entity:
       name: Touchfield 3 Gesture Sensor
-      default: ""
+      default: binary_sensor.dummy
       selector:
         entity:
           domain: binary_sensor
@@ -78,7 +79,7 @@ blueprint:
 
     touchfield_4_entity:
       name: Touchfield 4 Gesture Sensor
-      default: ""
+      default: binary_sensor.dummy
       selector:
         entity:
           domain: binary_sensor
@@ -93,15 +94,32 @@ mode: single
 
 trigger:
   - platform: state
-    entity_id: >
-      {% set sensors = [] %}
-      {% if swipe_up_entity != "" %} {{ sensors.append(swipe_up_entity) }} {% endif %}
-      {% if swipe_down_entity != "" %} {{ sensors.append(swipe_down_entity) }} {% endif %}
-      {% if touchfield_1_entity != "" %} {{ sensors.append(touchfield_1_entity) }} {% endif %}
-      {% if touchfield_2_entity != "" %} {{ sensors.append(touchfield_2_entity) }} {% endif %}
-      {% if touchfield_3_entity != "" %} {{ sensors.append(touchfield_3_entity) }} {% endif %}
-      {% if touchfield_4_entity != "" %} {{ sensors.append(touchfield_4_entity) }} {% endif %}
-      {{ sensors | join(',') }}
+    entity_id: !input swipe_up_entity
+    from: 'off'
+    to: 'on'
+
+  - platform: state
+    entity_id: !input swipe_down_entity
+    from: 'off'
+    to: 'on'
+
+  - platform: state
+    entity_id: !input touchfield_1_entity
+    from: 'off'
+    to: 'on'
+
+  - platform: state
+    entity_id: !input touchfield_2_entity
+    from: 'off'
+    to: 'on'
+
+  - platform: state
+    entity_id: !input touchfield_3_entity
+    from: 'off'
+    to: 'on'
+
+  - platform: state
+    entity_id: !input touchfield_4_entity
     from: 'off'
     to: 'on'
 
@@ -109,7 +127,10 @@ action:
   - choose:
       - conditions:
           - condition: template
-            value_template: "{{ swipe_up_entity != '' and trigger.entity_id == swipe_up_entity and swipe_up_target | length > 0 }}"
+            value_template: >
+              {{ trigger.entity_id != 'binary_sensor.dummy' and
+                 trigger.entity_id == swipe_up_entity and
+                 swipe_up_target | length > 0 }}
         sequence:
           - service: light.turn_on
             data:
@@ -117,7 +138,10 @@ action:
 
       - conditions:
           - condition: template
-            value_template: "{{ swipe_down_entity != '' and trigger.entity_id == swipe_down_entity and swipe_down_target | length > 0 }}"
+            value_template: >
+              {{ trigger.entity_id != 'binary_sensor.dummy' and
+                 trigger.entity_id == swipe_down_entity and
+                 swipe_down_target | length > 0 }}
         sequence:
           - service: light.turn_off
             data:
@@ -125,7 +149,10 @@ action:
 
       - conditions:
           - condition: template
-            value_template: "{{ touchfield_1_entity != '' and trigger.entity_id == touchfield_1_entity and touchfield_1_toggle_target | length > 0 }}"
+            value_template: >
+              {{ trigger.entity_id != 'binary_sensor.dummy' and
+                 trigger.entity_id == touchfield_1_entity and
+                 touchfield_1_toggle_target | length > 0 }}
         sequence:
           - service: light.toggle
             data:
@@ -133,7 +160,10 @@ action:
 
       - conditions:
           - condition: template
-            value_template: "{{ touchfield_2_entity != '' and trigger.entity_id == touchfield_2_entity and touchfield_2_toggle_target | length > 0 }}"
+            value_template: >
+              {{ trigger.entity_id != 'binary_sensor.dummy' and
+                 trigger.entity_id == touchfield_2_entity and
+                 touchfield_2_toggle_target | length > 0 }}
         sequence:
           - service: light.toggle
             data:
@@ -141,7 +171,10 @@ action:
 
       - conditions:
           - condition: template
-            value_template: "{{ touchfield_3_entity != '' and trigger.entity_id == touchfield_3_entity and touchfield_3_toggle_target | length > 0 }}"
+            value_template: >
+              {{ trigger.entity_id != 'binary_sensor.dummy' and
+                 trigger.entity_id == touchfield_3_entity and
+                 touchfield_3_toggle_target | length > 0 }}
         sequence:
           - service: light.toggle
             data:
@@ -149,7 +182,10 @@ action:
 
       - conditions:
           - condition: template
-            value_template: "{{ touchfield_4_entity != '' and trigger.entity_id == touchfield_4_entity and touchfield_4_toggle_target | length > 0 }}"
+            value_template: >
+              {{ trigger.entity_id != 'binary_sensor.dummy' and
+                 trigger.entity_id == touchfield_4_entity and
+                 touchfield_4_toggle_target | length > 0 }}
         sequence:
           - service: light.toggle
             data:
